--- a/index.html
+++ b/index.html
@@ -4,51 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Footer Example</title>
-    <!-- Include Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body class="bg-green-500 dark:bg-white-800 text-gray-900 dark:text-gray-100">
-
-    <footer class="bg-[#659f8f] dark:bg-[#313131]">
-        <div class="container mx-auto px-6 py-12">
-            <div class="grid grid-cols-1 gap-6 sm:grid-cols-2">
+<body>
+    <footer class="bg-[#659f8f] dark:bg-[#116d23]">
+        <div class="container px-6 py-12 mx-auto">
+            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-x-20">
                 <div>
-                    <h1 class="text-white max-w-lg">Subscribe.</h1>
-                    <div class="flex mt-4">
-                        <input id="email" type="text" class="w-full px-3 py-2.5 bg-white border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-[#659f8f] dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-[#313131]">
-                        <button class="ml-2 px-6 py-2.5 bg-white border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-[#659f8f] dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-[#313131]">
-                            Subscribe
-                        </button>
+                    <h1 class="text-white text-lg mb-4">Subscribe</h1>
+                    <div class="flex gap-2">
+                        <input id="email" type="text" placeholder="Your email address" class="rounded-l-lg px-4 py-2 border-t mr-0 border-b border-l text-gray-800 border-gray-200 bg-white">
+                        <button class="px-4 rounded-r-lg bg-orange-400 text-white">Subscribe</button>
                     </div>
                 </div>
-                <div class="mt-6 sm:mt-0">
-                    <p class="text-white">Quick Links</p>
-                    <div class="flex mt-2">
-                        <a href="#" class="mr-4">Home</a>
-                        <a href="#" class="mr-4">Who We Are</a>
-                        <a href="#">Our Philosophy</a>
+                <div>
+                    <h2 class="text-white text-lg mb-4">Quick Links</h2>
+                    <div class="flex flex-col">
+                        <a href="#" class="text-gray-300 hover:text-white">Home</a>
+                        <a href="#" class="text-gray-300 hover:text-white">Who We Are</a>
+                        <a href="#" class="text-gray-300 hover:text-white">Our Philosophy</a>
                     </div>
                 </div>
-                <div class="mt-6 sm:col-span-2">
-                    <p class="text-white">Technologies</p>
-                    <div class="flex mt-2">
-                        <a href="#" class="mr-4">HTML</a>
-                        <a href="#" class="mr-4">CSS</a>
-                        <a href="#">JavaScript</a>
+                <div>
+                    <h2 class="text-white text-lg mb-4">Technologies</h2>
+                    <div class="flex flex-col">
+                        <a href="#" class="text-gray-300 hover:text-white">HTML</a>
+                        <a href="#" class="text-gray-300 hover:text-white">CSS</a>
+                        <a href="#" class="text-gray-300 hover:text-white">JavaScript</a>
                     </div>
                 </div>
             </div>
-
             <hr class="my-6 border-[#d86943]">
-
-            <div class="flex justify-center">
+            <div class="flex">
                 <a href="#">
-                    <img class="w-auto h-7" src="https://codespace-assets.global.ssl.fastly.net/wp/assets/website/codespace-primary-logo-light.svg" alt="Codespace Logo">
+                    <img src="https://codespace-assets.global.ssl.fastly.net/wp/assets/website/codespace-primary-logo-light.svg" alt="CodeSpace Logo" class="w-48 h-auto">
                 </a>
             </div>
         </div>
     </footer>
-
 </body>
 </html>
+
